chore(deps): override transitive rollup 2.x to use direct dependency version
Add pnpm override to force all transitive rollup dependencies to use
the direct dependency version (4.59.0), eliminating the old 2.79.2
pulled in by workbox-build.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -169,7 +169,8 @@
       "vue-demi"
     ],
     "overrides": {
-      "minimatch": "^10.2.1"
+      "minimatch": "^10.2.1",
+      "rollup": "$rollup"
     }
   }
 }
