chore(deps): upgrade transitive basic-ftp from 5.0.5 to 5.2.0
Add pnpm override to bump basic-ftp (transitive dependency via
puppeteer/get-uri) from 5.0.5 to 5.2.0.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -170,7 +170,8 @@
     ],
     "overrides": {
       "minimatch": "^10.2.1",
-      "rollup": "$rollup"
+      "rollup": "$rollup",
+      "basic-ftp": "5.2.0"
     }
   }
 }
