Adding TLS options to Redis connection.

--- a/config-raw.json
+++ b/config-raw.json
@@ -256,7 +256,7 @@
                 {
                     "key": "enabled",
                     "default_value": "false",
-                    "comment": "Whether to enable redis or not"
+                    "comment": "Whether to enable redis or not."
                 },
                 {
                     "key": "host",
@@ -266,12 +266,37 @@
                 {
                     "key": "password",
                     "default_value": "",
-                    "comment": "The password used to authenticate against the redis server"
+                    "comment": "The password used to authenticate against the redis server."
                 },
                 {
                     "key": "db",
                     "default_value": "0",
                     "comment": "0 means default database"
+                },
+                {
+                    "key": "tls",
+                    "default_value": "false",
+                    "comment": "Whether to enable TLS or not."
+                },
+                {
+                    "key": "tlsclientcert",
+                    "default_value": "",
+                    "comment": "The path to a client certificate, if you choose to use one."
+                },
+                {
+                    "key": "tlsclientkey",
+                    "default_value": "",
+                    "comment": "The path to the client certificate's private key."
+                },
+                {
+                    "key": "tlscacert",
+                    "default_value": "",
+                    "comment": "The path to a certificate authority certificate, for verifying the server's certificate."
+                },
+                {
+                    "key": "tlsskipverify",
+                    "default_value": "true",
+                    "comment": "Whether to skip verification of the server's TLS certificate."
                 }
             ]
         },
